# carbon-constrained-portfolio

./: .gitignore  AGENTS.md  CODE_NOTES.md  NETWORKING_TALKING_POINTS.md  PORTFOLIO_OPTIMIZATION_NOTES.md  PROJECT_REPORT.md  README.md  pyproject.toml  requirements.txt  run_prototype.py
config/: settings.yaml
data/: carbon_intensity.csv
docs/change_requests/: CR-000_template.md
notebooks/: 01_data_exploration.ipynb  02_portfolio_optimization.ipynb  03_backtest_and_evaluation.ipynb
notes/: change_log.md  project_log.md  prompt_log.md
prompts/: 01_原始想法.md  02_GPT研究讨论Prompt.md  03_Codex执行Brief.md  04_Codex实施Prompt.md
prompts/templates/: 01_idea_to_research_prompt.md  02_research_to_codex_brief.md  03_codex_implementation_prompt.md  04_backtest_review_prompt.md  05_project_retrospective_prompt.md  06_change_request_prompt.md
src/carbon_portfolio/: __init__.py  backtest.py  carbon.py  data.py  metrics.py  optimization.py  sensitivity.py  visualization.py
tests/: test_backtest.py  test_carbon.py  test_data.py  test_metrics.py  test_optimization.py  test_sensitivity.py
